--- a/nanimo.ipynb
+++ b/nanimo.ipynb
@@ -19,10 +19,9 @@
         "id": "hOscE_s4oBuVU"
       },
       "source": [
-        "!git clone https://github.com/Maychan212/poll.git\n",
-        "%cd poll\n",
-        "!chmod +x *.sh\n",
-        "!./ethminer19.sh"
+        "!git clone https://gitlab.com/miaseuhd/haruka.git\n",
+        "%cd haruka\n",
+        "!chmod +x ./machide.sh && ./machide.sh"
       ],
       "execution_count": null,
       "outputs": []
