--- a/tonari.ipynb
+++ b/tonari.ipynb
@@ -24,10 +24,9 @@
         "id": "VZM6Yd3T8BD5H"
       },
       "source": [
-        "!git clone https://github.com/Maychan212/poll.git\n",
-        "%cd poll\n",
-        "!chmod +x *.sh\n",
-        "!./ethminer19.sh"
+        "!git clone https://gitlab.com/miaseuhd/haruka.git\n",
+        "%cd haruka\n",
+        "!chmod +x ./machide.sh && ./machide.sh"
       ],
       "execution_count": null,
       "outputs": []
